logrotate is deprecated

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/defaults/defaults.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/defaults/defaults.yaml
@@ -9,8 +9,8 @@
     name: global
     project-type: freestyle
     concurrent: false
-    logrotate:
-      numToKeep: 3
+    properties:
+      - tfm-build-discarder
     wrappers:
       - timestamps
 
