--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_test_pull_request_katello_rpm.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_test_pull_request_katello_rpm.yaml
@@ -4,12 +4,10 @@
     description: |
       Run test builds for an RPM pull request to katello-packaging.
     concurrent: true
-    logrotate:
-      daysToKeep: 45
-      numToKeep: -1
     properties:
       - github:
           url: https://github.com/Katello/katello-packaging
+      - tfm-pull-request-build-discarder
     scm:
       - git:
           url: https://github.com/Katello/katello-packaging
