--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/smart-proxy-plugin-pull-request.yaml
@@ -2,12 +2,10 @@
     name: 'smart-proxy-{plugin}-pull-request'
     concurrent: true
     project-type: matrix
-    logrotate:
-      daysToKeep: 45
-      numToKeep: -1
     properties:
       - github:
           url: 'https://github.com/theforeman/smart_proxy_{plugin}'
+      - tfm-pull-request-build-discarder
     scm:
       - git:
           url: 'https://github.com/theforeman/smart_proxy_{plugin}'
