--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop_pr_upgrade.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop_pr_upgrade.yaml
@@ -6,12 +6,10 @@
 - job:
     name: test_develop_pr_upgrade
     project-type: matrix
-    logrotate:
-      daysToKeep: 45
-      numToKeep: -1
     concurrent: true
     properties:
       - github_foreman
+      - tfm-pull-request-build-discarder
     wrappers:
       - abort_build:
           timeout_min: 30
