--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_parsers_master_pull_request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_parsers_master_pull_request.yaml
@@ -4,12 +4,10 @@
       Tests a Kafo Parsers pull request under each Ruby and Puppet configuration.
     concurrent: true
     project-type: matrix
-    logrotate:
-      daysToKeep: 45
-      numToKeep: -1
     properties:
       - github:
           url: https://github.com/theforeman/kafo_parsers
+      - tfm-pull-request-build-discarder
     scm:
       - git:
           url: https://github.com/theforeman/kafo_parsers
