--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/tests/katello-pr-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/tests/katello-pr-test.yaml
@@ -2,12 +2,10 @@
     name: katello-pr-test
     project-type: workflow
     concurrent: true
-    logrotate:
-      daysToKeep: 30
-      numToKeep: -1
     properties:
       - github:
           url: https://github.com/Katello/katello
+      - tfm-pull-request-build-discarder
     triggers:
       - github_pr_pipeline:
           context: 'katello'
