--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_hammer_cli_foreman_discovery_pull_request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_hammer_cli_foreman_discovery_pull_request.yaml
@@ -4,12 +4,10 @@
       Test a Hammer CLI (Foreman Discovery) pull request under each Ruby version.
     project-type: matrix
     concurrent: true
-    logrotate:
-      daysToKeep: 45
-      numToKeep: -1
     properties:
       - github:
           url: https://github.com/theforeman/hammer-cli-foreman-discovery
+      - tfm-pull-request-build-discarder
     parameters:
       - pr_parameters
     scm:
