--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop_pr_core.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop_pr_core.yaml
@@ -4,12 +4,10 @@
       Tests a Smart Proxy pull request under each Ruby and Puppet configuration.
     project-type: matrix
     concurrent: true
-    logrotate:
-      daysToKeep: 45
-      numToKeep: -1
     properties:
       - github:
           url: https://github.com/theforeman/smart-proxy/
+      - tfm-pull-request-build-discarder
     scm:
       - git:
           url: https://github.com/theforeman/smart-proxy/
