Use newer packaging PR job for 1.18

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/github_pr.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/github_pr.yaml
@@ -26,17 +26,19 @@
       - github-pull-request:
           <<: *ghprb_defaults
           white-list-target-branches:
-            - rpm/1.*
+            - rpm/1.16
+            - rpm/1.17
             - deb/.*
 
 - trigger:
-    name: github_pr_rpm_develop
+    name: github_pr_rpm
     triggers:
       - github-pull-request:
           <<: *ghprb_defaults
           status-url: https://ci.theforeman.org/blue/organizations/jenkins/$JOB_NAME/detail/$JOB_NAME/$BUILD_ID/pipeline
           white-list-target-branches:
             - rpm/develop
+            - rpm/1.18
 
 - trigger:
     name: github_pr_pipeline
