--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/foreman-packaging-rpm-pr-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/foreman-packaging-rpm-pr-test.yaml
@@ -6,7 +6,7 @@
       - github:
           url: https://github.com/theforeman/foreman-packaging
     triggers:
-      - github_pr_rpm_develop:
+      - github_pr_rpm:
           context: 'rpm'
     dsl:
       !include-raw:
