--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/hammer-cli-katello-nightly-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/hammer-cli-katello-nightly-release.yaml
@@ -1,6 +1,6 @@
 - job:
     name: hammer-cli-katello-nightly-release
-    project_type: pipeline
+    project-type: pipeline
     sandbox: false
     triggers:
       - timed: '0 22 * * *'
