remove gem generation from test_katello_core
... and disassociate build_rpm_rubygem_katello_nightly from test_katello

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_core.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_core.yaml
@@ -45,7 +45,7 @@
       - test_katello
     publishers:
       - archive:
-          artifacts: 'plugin/pkg/*,Gemfile.lock'
+          artifacts: 'Gemfile.lock'
           only-if-success: false
       - gemset_cleanup
       - junit:
