--- a/puppet/modules/jenkins_job_builder/files/centos.org/ansible/provision.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/ansible/provision.yml
@@ -22,3 +22,8 @@
           {{ value.hostname }} ansible_fqdn={{ value.hostname }} ansible_ssh_user=root ansible_ssh_private_key_file=~/.ssh/id_rsa ansible_ssh_host={{ value.ip_address }}
           {% endfor %}
         dest: "{{ playbook_dir }}/cico_inventory"
+
+    - name: 'Write cico ssh config file'
+      template:
+        src: templates/ssh_config.j2
+        dest: "{{ playbook_dir }}/ssh_config"
