fix hammer-cli-katello-nightly-release job

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/hammer-cli-katello-nightly-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/hammer-cli-katello-nightly-release.yaml
@@ -3,7 +3,7 @@
     project-type: pipeline
     sandbox: false
     triggers:
-      - timed: '0 22 * * *'
+      - github
     dsl:
       !include-raw:
         - pipelines/release/hammerCliKatelloNightlyRelease.groovy
