--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman_discovery.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman_discovery.yaml
@@ -6,5 +6,7 @@
           foreman_branch: develop
       - 11.0-stable:
           foreman_branch: 1.17-stable
+      - 12.0-stable:
+          foreman_branch: 1.18-stable
     jobs:
       - 'test_plugin_{name}_{branch}'
