add Ubuntu/bionic configs

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
@@ -15,6 +15,7 @@
           type: user-defined
           name: os
           values:
+          - bionic
           - jessie
           - stretch
           - xenial
@@ -49,6 +50,7 @@ Any value other than "theforeman" will be pushed to http://stagingdeb.theforeman
           name: onlyos
           choices:
             - all
+            - bionic
             - jessie
             - stretch
             - xenial
