--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
@@ -12,6 +12,7 @@
           type: user-defined
           name: os
           values:
+          - bionic
           - jessie
           - stretch
           - xenial
@@ -50,6 +51,7 @@ Any value other than "theforeman" will be pushed to http://stagingdeb.theforeman
           name: onlyos
           choices:
             - all
+            - bionic
             - jessie
             - stretch
             - xenial
