don't build bionic packages on 1.16 - 1.18

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
@@ -29,7 +29,7 @@
           values:
           - debian
     execution-strategy:
-      combination-filter: '((onlyarch == "all") || onlyarch == arch) && ((onlyos == "all") || onlyos == os) && !(version != "1.16" && os == "jessie") && !((version != "1.16" || version != 1.17) && arch == "armv7")'
+      combination-filter: '((onlyarch == "all") || onlyarch == arch) && ((onlyos == "all") || onlyos == os) && !(version != "1.16" && os == "jessie") && !((version != "1.16" || version != 1.17) && arch == "armv7") && !((version == "1.16" || version == "1.17" || version == "1.18") && os == "bionic")'
     builders:
       - build_deb_coreproject
     publishers:
