Centralize the groovy library files into theforeman.org

--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-forklift-containers-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-forklift-containers-test.yaml
@@ -15,6 +15,6 @@
     dsl:
       !include-raw:
         - pipelines/test/containers.groovy
-        - pipelines/lib/duffy.groovy
-        - pipelines/lib/ansible.groovy
-        - pipelines/lib/folderChanged.groovy
+        - ../theforeman.org/pipelines/lib/duffy.groovy
+        - ../theforeman.org/pipelines/lib/ansible.groovy
+        - ../theforeman.org/pipelines/lib/folderChanged.groovy
