--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-nightly-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-nightly-release.yaml
@@ -6,4 +6,4 @@
     dsl:
       !include-raw:
         - pipelines/release/katelloRelease.groovy
-        - ../centos.org/pipelines/lib/ansible.groovy
+        - pipelines/lib/ansible.groovy
