Add rails-packaging PR test

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/github_pr.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/triggers/github_pr.yaml
@@ -46,3 +46,12 @@
       - github-pull-request:
           <<: *ghprb_defaults
           status-url: https://ci.theforeman.org/blue/organizations/jenkins/$JOB_NAME/detail/$JOB_NAME/$BUILD_ID/pipeline
+
+- trigger:
+    name: github_pr_rails_packaging
+    triggers:
+      - github-pull-request:
+          <<: *ghprb_defaults
+          status-url: https://ci.theforeman.org/blue/organizations/jenkins/$JOB_NAME/detail/$JOB_NAME/$BUILD_ID/pipeline
+          white-list-target-branches:
+            - tfm-ror52
