--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-nightly-test.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-nightly-test.yml
@@ -1,11 +1,11 @@
 ---
 - job:
-    name: 'foreman-katello-nightly-test'
+    name: 'foreman-nightly-test'
     project-type: 'pipeline'
     sandbox: true
     dsl:
       !include-raw:
-        - pipelines/test/katelloNightlyTest.groovy
+        - pipelines/test/foremanNightlyTest.groovy
         - ../theforeman.org/pipelines/lib/duffy.groovy
         - ../theforeman.org/pipelines/lib/ansible.groovy
         - ../theforeman.org/pipelines/lib/folderChanged.groovy
