--- a/puppet/modules/jenkins_job_builder/files/centos.org/ansible/jenkins_job.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/ansible/jenkins_job.yml
@@ -53,7 +53,7 @@
         password: "{{ jenkins_password }}"
         url: "{{ start_job_result.location }}api/json"
       register: poll_result
-      until: poll_result.json.executable.number | default(0) | int > 0
+      until: (poll_result.json is defined) and (poll_result.json.executable.number | default(0) | int > 0)
       retries: 10
       delay: 4
 
@@ -76,7 +76,7 @@
         password: "{{ jenkins_password }}"
         url: "{{ jenkins_host }}/job/{{ jenkins_job_name }}/{{ poll_result.json.executable.number }}/api/json"
       register: build_job_result
-      until: build_job_result.json.result == 'SUCCESS' or build_job_result.json.result == 'FAILURE'
+      until: (build_job_result.json is defined) and (build_job_result.json.result == 'SUCCESS' or build_job_result.json.result == 'FAILURE')
       retries: 280
       delay: 20
 
