Add ansible.groovy lib file to foreman-nightly-release job

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-nightly-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-nightly-release.yaml
@@ -7,3 +7,4 @@
       !include-raw:
         - pipelines/release/foremanRelease.groovy
         - pipelines/lib/rvm.groovy
+        - pipelines/lib/ansible.groovy
