test and push Ubuntu/bionic DEBs

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-mysql-nightly-systest.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-mysql-nightly-systest.yaml
@@ -13,6 +13,7 @@
             - centos7
             - debian9
             - ubuntu1604
+            - ubuntu1804
       - axis:
           type: label-expression
           name: label
