--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
@@ -15,6 +15,7 @@
           values:
           - debian9
           - ubuntu1604
+          - ubuntu1804
       - axis:
           type: label-expression
           name: label
