--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-puppet-nightly-systest.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-puppet-nightly-systest.yaml
@@ -14,6 +14,7 @@
             - centos7
             - debian9
             - ubuntu1604
+            - ubuntu1804
       - axis:
           type: label-expression
           name: label
