Add Katello 3.8 pipeline

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-3.8-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-3.8-release.yaml
@@ -1,9 +1,9 @@
 - job:
-    name: katello-nightly-release
+    name: katello-3.8-release
     project-type: pipeline
     triggers:
       - timed: 'H 23 * * *'
     dsl:
       !include-raw:
-        - pipelines/release/katello/nightly.groovy
+        - pipelines/release/katello/3.8.groovy
         - pipelines/lib/ansible.groovy
