add foreman-tasks 0.13.x test

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman-tasks.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman-tasks.yaml
@@ -4,5 +4,7 @@
     branch:
       - master:
           foreman_branch: develop
+      - 0.13.x:
+          foreman_branch: 1.18-stable
     jobs:
       - 'test_plugin_{name}_{branch}'
