--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
@@ -29,7 +29,7 @@
           run_hammer_tests: false
           db_type: ''
           umask: ''
-          expected_version: ''
+          expected_version: '1.20.0-develop'
     wrappers:
       - abort_build:
           timeout_min: 60
