--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-packaging.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-packaging.yaml
@@ -9,7 +9,7 @@
           git-config-name: Jenkins
           git-config-email: 'packaging@theforeman.org'
           branches:
-            - '*/{branch}'
+            - '*/deb/{branch}'
 - scm:
     name: foreman-rpm-packaging
     scm:
