Fix container PR trigger

--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-forklift-containers-pr-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-forklift-containers-pr-test.yaml
@@ -12,7 +12,7 @@
           org-list:
             - theforeman
           status-context: 'containers'
-          trigger-phrase: '.*\[test containers/deploy\].*'
+          trigger-phrase: '.*\[test containers\].*'
           permit-all: true
           github-hooks: true
           allow-whitelist-orgs-as-admins: true
