apply 18f4ea356 to other deb build jobs

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_proxy_plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_proxy_plugin.yaml
@@ -10,7 +10,7 @@
           url: https://github.com/theforeman/foreman-packaging/
     scm:
       - foreman-deb-packaging:
-          branch: 'deb/${repo}'
+          branch: '${repo}'
     axes:
       - axis:
           type: user-defined
