--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
@@ -9,7 +9,7 @@
           url: https://github.com/theforeman/foreman-packaging/
     scm:
       - foreman-deb-packaging:
-          branch: 'deb/${repo}'
+          branch: '${repo}'
     axes:
       - axis:
           type: user-defined
