Add a clone_foreman_infra function

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_yum.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_yum.yaml
@@ -26,3 +26,4 @@
       !include-raw:
         - pipelines/release/deployYum.groovy
         - pipelines/lib/rvm.groovy
+        - pipelines/lib/foreman_infra.groovy
