--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-nightly-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-nightly-release.yaml
@@ -8,3 +8,4 @@
         - pipelines/release/foremanRelease.groovy
         - pipelines/lib/rvm.groovy
         - pipelines/lib/ansible.groovy
+        - pipelines/lib/foreman_infra.groovy
