--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-plugins-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/foreman-plugins-release.yaml
@@ -7,3 +7,4 @@
       !include-raw:
         - pipelines/release/foremanPluginsRelease.groovy
         - pipelines/lib/rvm.groovy
+        - pipelines/lib/foreman_infra.groovy
