--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-3.8-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-3.8-release.yaml
@@ -5,3 +5,4 @@
       !include-raw:
         - pipelines/release/katello/3.8.groovy
         - pipelines/lib/ansible.groovy
+        - pipelines/lib/foreman_infra.groovy
