--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-nightly-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release/katello-nightly-release.yaml
@@ -7,3 +7,4 @@
       !include-raw:
         - pipelines/release/katello/nightly.groovy
         - pipelines/lib/ansible.groovy
+        - pipelines/lib/foreman_infra.groovy
