--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-katello-nightly-test.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-katello-nightly-test.yml
@@ -10,3 +10,4 @@
         - ../theforeman.org/pipelines/lib/duffy.groovy
         - ../theforeman.org/pipelines/lib/ansible.groovy
         - ../theforeman.org/pipelines/lib/folderChanged.groovy
+        - ../theforeman.org/pipelines/lib/foreman_infra.groovy
