--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/puppet-deploy.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/puppet-deploy.yaml
@@ -11,5 +11,6 @@
     dsl:
       !include-raw:
         - pipelines/release/puppetDeploy.groovy
+        - pipelines/lib/foreman_infra.groovy
     publishers:
       - ircbot_freenode
