Update ci.centos.org nightly jobs to use new job template

--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-katello-nightly-test.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-katello-nightly-test.yml
@@ -5,6 +5,7 @@
     sandbox: true
     dsl:
       !include-raw:
+        - pipelines/lib/foremanCentosJob.groovy
         - pipelines/test/katelloNightlyTest.groovy
         - ../theforeman.org/pipelines/lib/duffy.groovy
         - ../theforeman.org/pipelines/lib/ansible.groovy
