--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-nightly-test.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-nightly-test.yml
@@ -5,6 +5,7 @@
     sandbox: true
     dsl:
       !include-raw:
+        - pipelines/lib/foremanCentosJob.groovy
         - pipelines/test/foremanNightlyTest.groovy
         - ../theforeman.org/pipelines/lib/duffy.groovy
         - ../theforeman.org/pipelines/lib/ansible.groovy
