Add missing foreman_infra library

--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-forklift-containers-pr-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-forklift-containers-pr-test.yaml
@@ -21,6 +21,7 @@
     dsl:
       !include-raw:
         - pipelines/test/containers.groovy
+        - ../theforeman.org/pipelines/lib/foreman_infra.groovy
         - ../theforeman.org/pipelines/lib/duffy.groovy
         - ../theforeman.org/pipelines/lib/ansible.groovy
         - ../theforeman.org/pipelines/lib/folderChanged.groovy
