--- a/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-katello-upgrade-nightly-test.yml
+++ b/puppet/modules/jenkins_job_builder/files/centos.org/jobs/foreman-katello-upgrade-nightly-test.yml
@@ -9,3 +9,4 @@
         - pipelines/test/katelloUpgradeNightly.groovy
         - ../theforeman.org/pipelines/lib/duffy.groovy
         - ../theforeman.org/pipelines/lib/ansible.groovy
+        - ../theforeman.org/pipelines/lib/foreman_infra.groovy
