--- a/.gitmodules
+++ b/.gitmodules
@@ -137,3 +137,6 @@
 [submodule "puppet/modules/powershell"]
 	path = puppet/modules/powershell
 	url = https://github.com/puppetlabs/puppetlabs-powershell.git
+[submodule "puppet/modules/unattended_upgrades"]
+	path = puppet/modules/unattended_upgrades
+	url = https://github.com/voxpupuli/puppet-unattended_upgrades.git
