Rename release jobs to pipeline per naming conventions

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-plugins-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/foreman-plugins-rpm-pipeline.yaml
@@ -1,11 +1,10 @@
 - job:
-    name: foreman-nightly-release
+    name: foreman-plugins-rpm-pipeline
     project-type: pipeline
     triggers:
-      - timed: 'H 21 * * *'
+      - timed: 'H H * * *'
     dsl:
       !include-raw:
-        - pipelines/release/foremanRelease.groovy
+        - pipelines/release/foremanPluginsRelease.groovy
         - pipelines/lib/rvm.groovy
-        - pipelines/lib/ansible.groovy
         - pipelines/lib/foreman_infra.groovy
