--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/katello-3.8-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/katello-3.8-rpm-pipeline.yaml
@@ -1,5 +1,5 @@
 - job:
-    name: katello-3.8-release
+    name: katello-3.8-rpm-pipeline
     project-type: pipeline
     dsl:
       !include-raw:
