--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/katello-nightly-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/katello-nightly-rpm-pipeline.yaml
@@ -1,5 +1,5 @@
 - job:
-    name: katello-nightly-release
+    name: katello-nightly-rpm-pipeline
     project-type: pipeline
     triggers:
       - timed: 'H 23 * * *'
