--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/tfm-ror52-rpm-pipeline.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/pipeline/tfm-ror52-rpm-pipeline.yaml
@@ -1,6 +1,6 @@
 ---
 - job:
-    name: tfm-ror52-release
+    name: tfm-ror52-rpm-pipeline
     project-type: pipeline
     concurrent: false
     properties:
