Refs #24780 - use native npm

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/foreman-plugins-pull-request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/builders/foreman-plugins-pull-request.yaml
@@ -35,8 +35,7 @@
 
           # we need to install node modules for integration tests
           if [ -e "${{APP_ROOT}}/package.json" ]; then
-            npm install npm@'<5.0.0' # first upgrade to newer npm
-            ${{APP_ROOT}}/node_modules/.bin/npm install
+            npm install
           fi
 
           # Database environment
@@ -63,7 +62,7 @@
 
           # If the plugin contains npm deps, we need to install its specific modules
           if [ -e "${{PLUGIN_ROOT}}/package.json" ]; then
-            ${{APP_ROOT}}/node_modules/.bin/npm install
+            npm install
           fi
 
           # Now let's add the plugin migrations
