Add RVM library to hammer-cli-katello-master-release

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/hammer-cli-katello-master-release.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/hammer-cli-katello-master-release.yaml
@@ -9,3 +9,4 @@
         - pipelines/vars/hammer-cli-katello-master-release.groovy
         - pipelines/release/rubygemRPMNightlyRelease.groovy
         - pipelines/lib/obal.groovy
+        - pipelines/lib/rvm.groovy
